# eucled

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
miscellaneous/: EmbeddingRelaxationAnimation_CompleteSystem.py
src/: CMakeLists.txt
src/Algorithms/: CMakeLists.txt  embedding.cpp  embedding.hpp  relaxation.cpp  relaxation.hpp
src/Executables/: CMakeLists.txt  numeric_embedding.cpp  test_case.cpp
src/IO/: CMakeLists.txt  DatFileWriter.cpp  DatFileWriter.hpp  VolFileWriter.cpp  VolFileWriter.hpp
src/Mesh/: CMakeLists.txt  DataMesh.cpp  DataMesh.hpp  DataMesh3D.cpp  DataMesh3D.hpp  Mesh.cpp  Mesh.hpp
src/Metrics/: CMakeLists.txt  Ellipsoid.cpp  Ellipsoid.hpp  KerrHorizon.cpp  KerrHorizon.hpp  Metric.hpp  Numeric.cpp  Numeric.hpp  Sphere.cpp  Sphere.hpp  XPeanut.cpp  XPeanut.hpp  ZPeanut.cpp  ZPeanut.hpp
src/Utilities/: CMakeLists.txt  commutator.cpp  commutator.hpp  cross_product.cpp  cross_product.hpp  integrate.cpp  integrate.hpp  math.hpp  rms.cpp  rms.hpp
src/algorithms/: CMakeLists.txt  Makefile  bicgstab.cpp  bicgstab.h  embedding.cpp  embedding.h  factorization.cpp  factorization.h  integration.cpp  integration.h  relaxation.cpp  relaxation.h
src/classes/: CMakeLists.txt  Makefile  dyad.cpp  dyad.h  grid.cpp  grid.h  metric.cpp  metric.h  time_stepper.cpp  time_stepper.h
src/cli/: CMakeLists.txt  embed.py  eucled  eucled.py  fidec.cpp  fidec.h  fidec.hpp  interpolate.py  isec.cpp  isec.hpp  run.py  test.py
src/executables/: CMakeLists.txt  eucled_test_case.cpp  test_case.cpp
src/exercises/: CMakeLists.txt
src/exercises/01-dot-products/: Makefile  main.cpp  main.h
src/exercises/02-finite-difference-derivatives/: Makefile  main.cpp  main.h
src/exercises/02-finite-difference-derivatives/assets/: plots.ipynb  residuals.csv
src/exercises/03-oblate-spheroid/: main.cpp
src/exercises/04-commutators-rescaled/: Makefile  main.cpp
src/exercises/04-commutators-rescaled/assets/: plots.ipynb  residuals.csv
src/exercises/05-commutators-rotated/: main.cpp  main.h
src/exercises/05-commutators-rotated/assets/: constant_residuals.csv  nonconstant_alpha_residuals.csv  nonconstant_residuals.csv  plots.ipynb
src/exercises/06-relaxation/: Makefile  main.cpp  main.h  relaxation.cpp  relaxation.h
src/exercises/06-relaxation/assets/: plots.ipynb
src/exercises/07-factorization/: Makefile  main.cpp  main.h
src/exercises/08-embedding/: CMakeLists.txt  Makefile  main.cpp  main.h
src/exercises/08-embedding/assets/: .gitignore  durations.csv  plots.ipynb  solution_residual_evolution.csv  solution_residuals.csv  solution_residuals_unweighted.csv
src/exercises/09-convergence/: CMakeLists.txt  main.cpp  main.h
src/exercises/09-convergence/assets/: plots.ipynb  plots.py
src/functions/: CMakeLists.txt  Makefile  commutator.cpp  commutator.h  cross_product.cpp  cross_product.h  dot_product.h
src/grids/: Grid.hpp  UniformGrid.cpp  UniformGrid.hpp
src/metrics/: CMakeLists.txt  DentedSphereMetric.cpp  DentedSphereMetric.hpp  EllipsoidMetric.cpp  EllipsoidMetric.hpp  KerrHorizonMetric.cpp  KerrHorizonMetric.hpp  Metric.hpp  NonaxisymmetricZPeanutMetric.cpp  NonaxisymmetricZPeanutMetric.hpp  NumericalMetric.cpp  NumericalMetric.hpp  OblateSpheroidMetric.cpp  OblateSpheroidMetric.hpp  RoundSphereMetric.cpp  RoundSphereMetric.hpp  XPeanutMetric.cpp  XPeanutMetric.hpp  ZPeanutMetric.cpp  ZPeanutMetric.hpp
src/utils/: CMakeLists.txt  Makefile  colors.cpp  colors.h  dot_product.cpp  math.cpp  math.h  rms.cpp  rms.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/Utilities/: CMakeLists.txt  Test_integrate.cpp
