add_executable(isec isec.cpp isec.hpp)
target_link_libraries(isec
	Metric
	DentedSphereMetric
	EllipsoidMetric
	KerrHorizonMetric
	NonaxisymmetricZPeanutMetric
	NumericalMetric
	OblateSpheroidMetric
	RoundSphereMetric
	XPeanutMetric
	ZPeanutMetric
	embedding
	relaxation
	dyad
	grid
	commutator
	cross_product
	dot_product
	math
	rms
)
